# LensorOS

./: .gdbinit  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README2.md  TODO.org  hello.txt  known_bugs.org  oldTODO.org  structure.dot
OVMFbin/: OVMF_CODE-pure-efi.fd  OVMF_VARS-pure-efi.fd  README.md
gnu-efi/: .gitignore  Makefile
gnu-efi/bootloader/: Makefile  main.c
gnu-efi/inc/: efidef.h
gnu-efi/x86_64/bootloader/: main.efi
kernel/: CMakeLists.txt  Makefile  README.toolchain  README.toolchain.md  config.cmake  fs_fat.s  kernel.ld  lensor_gnu_toolchain.cmake  mkimg.sh  mkiso.sh  run.bat  run.sh  rundbg.bat  rundbg.sh
kernel/res/: dfltfont.psf
kernel/scripts/: README.md  README.scripts.md  cinclude2dot.sh  install_mkgpt.sh  kernel.ld  mkgpt.sh  mkimg.sh  mkiso.sh  run.bat  run.sh  rundbg.bat  rundbg.sh  runhda.bat  runhda.sh  runhdadbg.bat  visualize_includes.sh
kernel/src/: BasicRenderer.cpp  BasicRenderer.h  FATDriver.cpp  FATDriver.h  FAT_definitions.h  FatFS.h  acpi.cpp  acpi.h  ahci.cpp  ahci.h  basic_renderer.cpp  basic_renderer.h  bitmap.cpp  bitmap.h  boot.h  cpu.h  cpuid.asm  cpuid.cpp  cpuid.h  cstr.cpp  cstr.h  debug.cpp  debug.h  e1000.cpp  e1000.h  efi_memory.cpp  efi_memory.h  elf.h  elf_loader.h  event.cpp  event.h  fat_definitions.h  fat_driver.cpp  fat_driver.h  fat_fs.h  file.h  filesystem.cpp  filesystem.h  filesystem_driver.h  gdt.asm  (+75 more)
kernel/src/ahci/: ahci.cpp  ahci.h
kernel/src/devices/: devices.cpp  devices.h
kernel/src/filesystems/: fs_fat.h
kernel/src/interrupts/: idt.cpp  idt.h  interrupts.cpp  interrupts.h  syscalls.asm  syscalls.cpp  syscalls.h
kernel/src/memory/: common.h  heap.cpp  heap.h  memory_manager.cpp  memory_manager.h  paging.h  physical_memory_manager.cpp  physical_memory_manager.h  region.h  virtual_memory_manager.cpp  virtual_memory_manager.h
kernel/src/paging/: page_frame_allocator.cpp  page_frame_allocator.h  page_table_manager.cpp  page_table_manager.h  paging.cpp  paging.h
kernel/src/storage/: file_metadata.h  filesystem_driver.h  storage_device_driver.h
kernel/src/storage/device_drivers/: dbgout.cpp  dbgout.h  gpt_partition.h  input.cpp  input.h  pipe.cpp  pipe.h  port_controller.cpp  port_controller.h  socket.cpp  socket.h
kernel/src/storage/filesystem_drivers/: dbgout.h  file_allocation_table.cpp  file_allocation_table.h  input.cpp  input.h  pipe.cpp  pipe.h  socket.cpp  socket.h
kernel/src/x86_64/: cpu.h
scripts/: README.md  buildrun.bat  buildrun.sh  cinclude2dot.sh  install_mkgpt.sh  mkbootdir.sh  mkfat32efibootimage.cmake  mkfat32images.cmake  mkfat32lensorosdata.cmake  mkgpt.sh  mkgpt_fdisk.sh  mkimg.bat  mkimg.ps1  mkimg.sh  mkiso.bat  mkiso.ps1  mkiso.sh  run.bat  run.ps1  run.sh  rundbg.bat  rundbg.sh  runhda.bat  runhda.ps1  runhda.sh  runhdadbg.bat  runhdadbg.sh  runiso.bat  runiso.ps1  runiso.sh  startup.nsh  sysroot.sh
std/include/: algorithm  array  atomic  bit  cmath  concepts  cstring  ctype.h  deque  extensions  extensions_double_ended_queue  extensions_ring_buffer  extensions_sparse_vector  filesystem  format  functional  iterator  locale  map  memory  new  stddef.h  stdint.h  string  string_view  type_traits  unordered_map  utility  vector
std/include/bits/: colours.h  decls.h  terminate.h
toolchain/: .gitignore  README.md  README.toolchain.md  binutils-2.38-lensor.patch  config.cmake  gcc-11.2.0-lensor.patch  gcc-11.2.0.patch  gcc-12.1.0-lensor.patch  lensor.h  lensor_gnu_toolchain.cmake  toolchain.sh  win_toolchain.sh
user/: CMakeLists.txt
user/blazeit/: CMakeLists.txt  blazeit  main.c
user/cat/: CMakeLists.txt  main.cpp
user/clienttest/: CMakeLists.txt  main.c
user/echo/: CMakeLists.txt  main.c  main.cpp
user/libc/: CMakeLists.txt  README.md  abi.cpp  assert.h  crt0.s  crti.s  crtn.s  errno.h  float.h  init.cpp  install-headers.cmake  install.sh  limits.h  stdalign.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.cpp  stdio.h  stdlib.cpp  stdlib.h  stdnoreturn.h  string.cpp  string.h  template.h  time.h  unistd.cpp  unistd.h
user/libc/bits/: abi.h  cdtors.h  decls.h  file_struct.h  io_defs.h  string_intrinsics.h  stub.h
user/libc/bits/std/: algorithm  atomic  mutex  new  type_traits  utility
user/libc/sys/: intrin.h  syscalls.cpp  syscalls.h  types.h
user/libc/test/: CMakeLists.txt  test.c  test.cc
user/libc/tests/: CMakeLists.txt  add-test.sh  testing.hh
user/libc/tests/test/string/: base.cpp  cat.cpp  compare-lex.cpp  compare.cpp  erase.cpp  misc.cpp  starts-ends.cpp  substr.cpp  view.cpp
user/libm/: CMakeLists.txt
user/libm/src/: stub.cpp
user/libstdc++/: CMakeLists.txt
user/libstdc++/src/: filesystem.cpp  stub.cpp
user/ls/: CMakeLists.txt  main.cpp
user/pwd/: CMakeLists.txt  main.c  pwd
user/servertest/: CMakeLists.txt  main.c
user/stdout/: CMakeLists.txt  framebuffer.c  framebuffer.h  ints.h  main.c  psf.c  psf.h  stdout
user/xish/: CMakeLists.txt
user/xish/src/: main.cpp
